--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "jest": "^25.5.0"
   },
   "dependencies": {
-    "@aws-cdk/core": "1.46.0",
+    "@aws-cdk/aws-ec2": "1.46.0",
     "@aws-cdk/aws-iam": "1.46.0",
     "@aws-cdk/aws-lambda": "1.46.0",
-    "@aws-cdk/aws-s3": "1.46.0",
     "@aws-cdk/aws-rds": "1.46.0",
-    "@aws-cdk/aws-ec2": "1.46.0"
+    "@aws-cdk/aws-s3": "1.46.0",
+    "@aws-cdk/aws-ssm": "1.46.0",
+    "@aws-cdk/core": "1.46.0"
   }
 }
