--- a/lambdas/getRegionsLambda/package.json
+++ b/lambdas/getRegionsLambda/package.json
@@ -9,9 +9,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "mysql2": "*"
-  },
-  "devDependencies": {
+    "mysql2": "*",
     "aws-sdk": "^2.706.0"
   }
 }
