--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@aws-cdk/aws-rds": "1.46.0",
     "@aws-cdk/aws-s3": "1.46.0",
     "@aws-cdk/aws-ssm": "1.46.0",
-    "@aws-cdk/core": "1.46.0"
+    "@aws-cdk/core": "1.46.0",
+    "@aws-cdk/aws-apigateway": "1.46.0"
   }
 }
