--- a/lambdas/layer/nodejs/package.json
+++ b/lambdas/layer/nodejs/package.json
@@ -9,7 +9,6 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "mysql2": "*",
-    "aws-sdk": "^2.706.0"
+    "mysql2": "^2.1.0"
   }
 }
