--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@aws-cdk/aws-s3": "1.46.0",
     "@aws-cdk/aws-ssm": "1.46.0",
     "@aws-cdk/core": "1.46.0",
-    "@aws-cdk/aws-apigateway": "1.46.0"
+    "@aws-cdk/aws-apigateway": "1.46.0",
+    "mysql2": "^2.1.0"
   }
 }
